--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "visresumemook",
   "version": "0.0.1",
   "description": "从0到1实现一款轻巧适用的简历平台桌面应用。",
-  "main": "./app/main/electron.js",
+  "main": "./app/main/electron.ts",
   "scripts": {
-    "start:main": "cross-env NODE_ENV=development electron ./app/main/electron.js",
+    "start:main": "webpack --config ./webpack/webpack.main.dev.js && electron ./dist/electron.js",
     "start:render": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack/webpack.render.dev.js"
   },
   "keywords": [],
@@ -27,9 +27,23 @@
     "@babel/preset-env": "7.14.2",
     "@babel/preset-react": "7.13.13",
     "@babel/preset-typescript": "7.13.0",
+    "@types/react": "^18.0.23",
+    "@types/react-dom": "^18.0.7",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
+    "eslint": "^7.26.0",
+    "eslint-config-alloy": "^4.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "4.3.0",
+    "prettier": "^2.3.0",
+    "typescript": "^4.8.4",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.2",
