--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/polyfill": "7.12.1",
     "cross-env": "^7.0.3",
     "electron": "11.1.1",
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-router": "5.2.0",
@@ -28,13 +29,17 @@
     "@babel/preset-react": "7.13.13",
     "@babel/preset-typescript": "7.13.0",
     "@types/react": "^18.0.23",
+    "@types/react-css-modules": "4.6.2",
     "@types/react-dom": "^18.0.7",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
+    "autoprefixer": "9.0.0",
     "babel-loader": "^8.2.5",
+    "babel-plugin-react-css-modules": "5.2.6",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "3.0.0",
     "eslint": "^7.26.0",
     "eslint-config-alloy": "^4.1.0",
     "eslint-config-prettier": "^8.3.0",
@@ -42,7 +47,12 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "4.3.0",
+    "less": "3.12.2",
+    "less-loader": "6.2.0",
+    "postcss-less": "3.1.4",
+    "postcss-loader": "3.0.0",
     "prettier": "^2.3.0",
+    "style-loader": "2.0.0",
     "typescript": "^4.8.4",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
