业务篇-首页开发

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,11 @@
     "moduleResolution": "node"
   },
   "exclude": ["dist", "node_modules"], // 这里需要排除掉 dist 目录和 node_modules 目录，不进行检查
-  "include": ["app/**/*.ts", "app/**/*.tsx", "app/**/*.d.ts"]
+  "include": ["app/**/*.ts", "app/**/*.tsx", "app/**/*.d.ts"],
+  "baseUrl": "./",
+  "paths": {
+    "@assets/*": ["./assets/*"],
+    "@src/*": ["./app/renderer/*"],
+    "@common/*": ["./app/renderer/common/*"]
+  },
 }
