--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-router": "5.2.0",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/cli": "7.14.3",
@@ -52,6 +53,8 @@
     "postcss-less": "3.1.4",
     "postcss-loader": "3.0.0",
     "prettier": "^2.3.0",
+    "rc-redux-model": "^1.1.10",
+    "redux-logger": "^3.0.6",
     "style-loader": "2.0.0",
     "typescript": "^4.8.4",
     "webpack": "4.44.1",
